# kewar

./: CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  cabal.project.local  kewar.cabal  qr.cabal
.github/workflows/: publish.yaml  test-pull-request.yaml
app/: Main.hs
data/: alignment.csv  alphanumeric.csv  capacities.csv  errors.csv  format.csv  logarithms.csv  remainder.csv  version.csv
src/: Kewar.hs  QR.hs  Utils.hs
src/Kewar/: Constants.hs  Encoding.hs  Layout.hs  Types.hs
src/Kewar/Encoding/: Analysis.hs  Data.hs  Error.hs
src/Kewar/Layout/: Constants.hs  Data.hs  FormatVersion.hs  FunctionalPatterns.hs  Interleaving.hs  Masking.hs  Types.hs
src/QR/: Analysis.hs  Constants.hs  Encoding.hs  ErrorCorrection.hs  FormatVersion.hs  Interleaving.hs  Layout.hs  Masking.hs  ModulePlacement.hs  Types.hs
src/QR/Encoding/: Analysis.hs  Data.hs  DataEncoding.hs  Error.hs  ErrorEncoding.hs  Grouping.hs
src/QR/Layout/: Constants.hs  Data.hs  FormatVersion.hs  FunctionalPatterns.hs  Interleaving.hs  Masking.hs  ModulePlacement.hs  Types.hs
test/: Spec.hs
test/Test/Kewar/Encoding/: Analysis.hs  Data.hs
test/Test/Kewar/Layout/: Masking.hs
test/Test/QR/: Analysis.hs  Encoding.hs  Masking.hs
test/Test/QR/Encoding/: Analysis.hs  Data.hs
test/Test/QR/Layout/: Masking.hs
