cabal-version:       2.4
name:                kewar
version:             0.1.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Manuel Spagnolo
maintainer:          Manuel Spagnolo <spagnolo.manu@gmail.com>
copyright:           2022 Manuel Spagnolo
build-type:          Simple
data-dir:            data
data-files:          *.csv
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:        array       >= 0.5.4 && < 0.6,
                        base        >= 4.14.3 && < 4.15,
                        containers  >= 0.6.5 && < 0.7,
                        split       >= 0.2.3 && < 0.3,

  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.0) 
    ghc-options:        -Wredundant-constraints
  if impl(ghc >= 8.2) 
    ghc-options:        -fhide-source-paths
  if impl(ghc >= 8.4) 
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.8) 
    ghc-options:        -Wmissing-deriving-strategies

  default-language:     Haskell2010

common other-modules
  other-modules:        QR.Encoding,
                          QR.Encoding.Analysis,
                          QR.Encoding.Data,
                          QR.Encoding.Error,
                        QR.Layout,
                          QR.Layout.Constants,
                          QR.Layout.Data,
                          QR.Layout.FormatVersion,
                          QR.Layout.FunctionalPatterns,
                          QR.Layout.Interleaving,
                          QR.Layout.Masking,
                          QR.Layout.Types,
                        QR.Constants,
                        QR.Types,
                        Paths_qr,
                        Utils
  autogen-modules:      Paths_qr

library 
  import:               common-options, 
                        other-modules
  hs-source-dirs:       src
  exposed-modules:      QR

executable qr 
  import:               common-options
  hs-source-dirs:       bin
  main-is:              QR/CLI.hs
  other-modules:        QR.CLI.Grid,
                        Paths_qr
  build-depends:        qr
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite qr-test  
  import:               common-options,
                        other-modules
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test,
                        src
  main-is:              Spec.hs
  other-modules:        Test.QR.Encoding.Analysis,
                        Test.QR.Encoding.Data,
                        Test.QR.Layout.Masking
  build-depends:        qr,
                        HUnit
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
