cabal-version:       2.4
name:                qr
version:             0.1.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Manuel Spagnolo
maintainer:          Manuel Spagnolo <spagnolo.manu@gmail.com>
copyright:           2022 Manuel Spagnolo
build-type:          Simple
data-dir:            data
data-files:          *.csv
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:        base, containers, array, split

  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.0) 
    ghc-options:        -Wredundant-constraints
  if impl(ghc >= 8.2) 
    ghc-options:        -fhide-source-paths
  if impl(ghc >= 8.4) 
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.8) 
    ghc-options:        -Wmissing-deriving-strategies

  default-language:     Haskell2010

library 
  import:               common-options
  hs-source-dirs:       src
  exposed-modules:      QR
  other-modules:        QR.Encoding
                        QR.Analysis,
                        QR.ErrorCorrection,
                        QR.Types,
                        QR.Constants,
                        QR.Interleaving,
                        QR.ModulePlacement,
                        QR.Masking,
                        QR.FormatVersion,
                        Utils,
                        Paths_qr

executable qr 
  import:               common-options
  hs-source-dirs:       bin
  main-is:              QR/CLI.hs
  other-modules:        QR.CLI.Grid
  build-depends:        qr
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite qr-test  
  import:               common-options
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test,
                        src
  main-is:              Spec.hs
  other-modules:        Test.QR.Masking,
                        QR.Masking
  build-depends:        qr,
                        HUnit
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N